--- a/html/hello_world.html
+++ b/html/hello_world.html
@@ -1,6 +1,6 @@
 <html>
      <head>
-           <title>1072시간</title>
+           <title>1072시간이다</title>
      </head>
      <body>
            <h1>고난의 코딩</h1>
