--- a/html/para.html
+++ b/html/para.html
@@ -8,6 +8,7 @@
     <p>
       위키백과의 가장 큰 특징은 누구나 편집과 관리에 참여할 수 있다는 점이다.[주석 1] 인터넷을 통해 누구나 글을 고칠 수 있는 체계인 위키로 만들어져 있어 집단 지성적 특성을 가진다.
       git-plus 짱이에요.
+      git-plus 짱이에요.
     </p>
     <p>
        폴란드어 위키백과의 문서를 담은 DVD, 2007년 7월 말에 나왔다.
