--- a/html/exercise.html
+++ b/html/exercise.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style type="text/css">
-    div#s_left{
-      width:200px;
-      heigh:700px;
-      background-color : yellow;
-      float;left;
-    }
     <meta charset="utf-8">
-    <title></title>
+    <title>Fruit</title>
   </head>
   <body>
+
+    <ul>
+      <li>
+         <dl>
+            <dt>apple
+            <dd>red, green color sweet fruit
+         </dl>
+      </li>
+      <li>
+         <dl>
+            <dt>orang
+            <dd>somethign that is orange is of a colour between red and yellow
+         </dl>
+      </li>
+      <li>banana</li>
+      <li>pine</li>
+      <li>kiwi</li>
+    </ul>
 
   </body>
 </html>
