--- a/html/exercise.html
+++ b/html/exercise.html
@@ -15,7 +15,7 @@
       </li>
       <li>
          <dl>
-            <dt>orang
+            <dt>orange
             <dd>somethign that is orange is of a colour between red and yellow
          </dl>
       </li>
