--- a/html/exercise.html
+++ b/html/exercise.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style type="text/css">
-    div#s_left{
-      width:200px;
-      heigh:700px;
-      background-color : yellow;
-      float;left;
-    }
     <meta charset="utf-8">
-    <title></title>
+    <title>exercise</title>
   </head>
   <body>
+    <table border="1" width="100%">
+     <tr>
+      <th>title1</th>
+      <th>title2</th>
+      <th>title3</th>
+      <th>title4</th>
+      <th>title5</th>
+      <th>title5</th>
+      <th>title5</th>
+     </tr>
+     <tr>
+      <td>title1</td>
+      <td>title2</td>
+      <td>title3</td>
+      <td>title4</td>
+      <td>title5</td>
+      <td>title5</td>
+     </tr>
+     <tr>
+      <td>title1</td>
+      <td>title2</td>
+      <td>title3</td>
+      <td>title4</td>
+      <td>title5</td>
 
+     </tr>
+     <tr>
+      <td>title1</td>
+      <td>title2</td>
+      <td>title3</td>
+      <td>title4</td>
+      <td>title5</td>
+
+     </tr>
+     <tr>
+      <td>title1</td>
+      <td>title2</td>
+      <td>title3</td>
+      <td>title4</td>
+      <td>title5</td>
+
+     </tr>
+    </table>
   </body>
 </html>
