--- a/html/exercise.html
+++ b/html/exercise.html
@@ -6,21 +6,20 @@
   </head>
   <body>
     <table border="1" width="100%">
+       <caption>  시간표 <caption>
      <tr>
       <th>title1</th>
       <th>title2</th>
       <th>title3</th>
       <th>title4</th>
       <th>title5</th>
-      <th>title5</th>
-      <th>title5</th>
+
      </tr>
      <tr>
       <td>title1</td>
       <td>title2</td>
       <td>title3</td>
       <td>title4</td>
-      <td>title5</td>
       <td>title5</td>
      </tr>
      <tr>
@@ -50,3 +49,36 @@
     </table>
   </body>
 </html>
+
+<table border="1" width="100" summary="월별 스마트폰 , 테블릿pc 판매현황"
+ <caption> <strong> 상품에 따른 월별 판매 현황 </strong> </caption>
+ <colgroup>
+   <col width="20%"/>
+   <col width="25%"/>
+   <col width="25%"/>
+   <col width="30%"/>
+ </colgroup>
+<thead>
+  <tr>
+   <th rowspan="2" scope="col">구분</th>
+   <th colspan="3" scope="colgroup">상품종류</th>
+   <th>스마트폰</th>
+   <th>태블릿pc</th>
+   <th>태블릿pc</th>
+ </tr>
+
+
+
+
+
+  </tr>
+
+
+  <form>
+   <fieldset name="flower">
+    <legend> flower </legend>
+   <input type="checkbox" name="flower" value="rose">rose<br/>
+   <input type="checkbox" name="flower" value="ivy">lily<br/>
+   <input type="checkbox" name="flower" value="jasmin">jasmin<br/>
+   </fieldset>
+  </form>
