--- a/html/가정통신문.html
+++ b/html/가정통신문.html
@@ -18,7 +18,7 @@
         드릴 말씀은 1학년 학새들이 착용하게 될 하복 및 생활복과 관련된 내용입니다. 본교를 학</br>
         교 운영 위원회 산하의 <b>교복 공동구매 위원회</b>의 심의로 하복 및 생활복을 공동구매하고 있으</br>
         며, 여러 번의 심의를 거쳐 2014학년도 교복 구매업체와 아래와 같이 가격을 결정하게 되었습<br/>니다.</p>
-        <p> -아래-<br/>
+        <p><center> -아래- </center><br/>
          <ol>
            <li>하복 및 생활복 구입 시기: 2014년 4월 19일 ~ 27일 (토요일, 일요일 활용)
            <li>구입처 및 연락처: 안산시 단원구 고잔2동 541-1 동서코아 2층 210호<br/>
@@ -31,31 +31,33 @@
            </li>
          </ol> </p>
          <table border="1" width="100%">
+          <thead>
            <tr>
              <td></td>
-             <td>품목</td>
-             <td>협의 가격</td>
-             <td>총 합계</td>
+             <td><center>품목</center></td>
+             <td><center>협의 가격</center></td>
+             <td><center>총 합계</center></td>
+           </tr>
+         </thead>
+           <tr>
+             <td rowspan="2"><center>하복</center></td>
+             <td><center>셔츠/ 블라우스 1벌</center></td>
+             <td><center>35,000</center></td>
+             <td rowspan="2"><center>95,000</center></td>
            </tr>
            <tr>
-             <td rowspan="2">하복</td>
-             <td>셔츠/ 블라우스 1벌</td>
-             <td>35,000</td>
-             <td rowspan="2">95,000 </td>
+             <td><center>하의 1벌</center></td>
+             <td><center>6,0000</center></td>
            </tr>
            <tr>
-             <td>하의 1벌</td>
-             <td>6,0000</td>
+             <td rowspan="2"><center>생활복</center></td>
+             <td><center>상의 2벌</center></td>
+             <td><center>62,000(31,000*2)</center></td>
+             <td rowspan="2"><center>110,000</center></td>
            </tr>
            <tr>
-             <td rowspan="2">생활복</td>
-             <td>상의 2벌</td>
-             <td>62,000(31,000*2)</td>
-             <td rowspan="2">110,000</td>
-           </tr>
-           <tr>
-             <td>하의 1벌</td>
-             <td>48,000</td>
+             <td><center>하의 1벌</center></td>
+             <td><center>48,000</center></td>
            </tr>
          </table>
          <p> 생활복의 경우 상의 2벌, 하의 1벌이 기본 구성입니다. 개별 금액은 상의 1벌 31,000원, 하의 1벌 48,000원 입니다.</p>
