--- a/html/exercise.html
+++ b/html/exercise.html
@@ -50,7 +50,7 @@
   </body>
 </html>
 
-<table border="1" width="100" summary="월별 스마트폰 , 테블릿pc 판매현황"
+<table border="1" width="100" summary="월별 스마트폰 , 테블릿pc 판매현황">
  <caption> <strong> 상품에 따른 월별 판매 현황 </strong> </caption>
  <colgroup>
    <col width="20%"/>
@@ -62,11 +62,27 @@
   <tr>
    <th rowspan="2" scope="col">구분</th>
    <th colspan="3" scope="colgroup">상품종류</th>
-   <th>스마트폰</th>
-   <th>태블릿pc</th>
-   <th>태블릿pc</th>
+   <!-- scope="colgroup" 행으로 병합되었을 때 그룹으로 사용함.  -->
+   <th scope="col"> 스마트폰</th>
+   <th scope="col"> 태블릿pc</th>
+   <th scope="col"> 태블릿pc</th>
  </tr>
-
+ </thead>
+ <tbody>
+   <tr>
+     <th scope="row"> 1월 </th>
+     <td> 5만원대 </td>
+     <td> 3만원대 </td>
+     <td> 1만원대 </td>
+   </tr>
+    <tr>
+      <th scope="row"> 2월 </th>
+      <td> 7만원대 </td>
+      <td> 2만원대 </td>
+      <td> 1만원대 </td>
+    </tr>
+  </tbody>
+</table>
 
 
 
