--- a/html/link.html
+++ b/html/link.html
@@ -16,9 +16,6 @@
    <a href="exercise.html">exercise</a><br/>
    <!-- 다른폴더 파일로 이동 -->
    <a href="../images/koala.jpg">koala</a>
-
-
-
-
+ </body>
 
 </html>
