--- a/html/menu2.html
+++ b/html/menu2.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>himedia</title>
   </head>
   <body>
-   <div style="border:1px black solid;">
-     <div style="border:1px blue solid;">
-       <ul style="border:1px red solid;">
-           <li><a href="">하이미디어</a>
+   <div id="gnb" style="border:1px black solid;" >
+     <div id="branch" style="border:1px blue solid;" >
+       <ul>
+           <li><a href="">하이미디어</a></li>
            <li><a href="">강남</a></li>
            <li><a href="">종로</a></li>
            <li><a href="">종로2</a></li>
@@ -23,183 +23,39 @@
            <li><a href="">인천</a></li>
            <li><a href="">전주</a></li>
            <li><a href="">구리</a></li>
-         </li>
        </ul>
      </div>
-     <div style="border:1px blue solid;">
+     <div id="sitemap" style="border:1px blue solid;">
        <input type="button" value="전체메뉴"/>
-        <div style="border:1px red solid;">
-          <ul>
-            <li><a href="">하이미디어</a>
-              <li><a href="">하이미디어Story</a></li>
-              <li><a href="">하이미디어History</a></li>
-              <li><a href="">캠퍼스소개</a></li>
-              <li><a href="">CI&amp;BI</a></li>
-              <li><a href="">파트너</a></li>
-              <li><a href="">채용안내</a></li>
-              <li><a href="">캠퍼스찾기</a></li>
-              <li><a href="">프랜차이즈안내</a></li>
-            </li>
-           </ul>
-          </div>
-
-           <div style="border:1px red solid;">
-             <ul>
-                <li><a href="">학생&ammp;일반과정</a>
-                  <li><a href="">전산회계/세무</a></li>
-                  <li><a href="">자격증과정</a></li>
-                  <li><a href="">방학특강</a></li>
-                  <li><a href="">웹(WEB)전문가</a></li>
-                  <li><a href="">편집디자인</a></li>
-                  <li><a href="">OA</a></li>
-                  <li><a href="">인테리어</a></li>
-                  <li><a href="">캐드응용디자인</a></li>
-               </li>
-            </ul>
-          </div>
-          <div style="border:1px red solid;">
-            <ul>
+         <div style="border:1px red solid;">
+           <ul>
+              <li><a href="">하이미디어</a>
+                 <ul>
+                    <li><a href="">하이미디어Story</a></li>
+                    <li><a href="">하이미디어History</a></li>
+                    <li><a href="">캠퍼스소개</a></li>
+                    <li><a href="">CI&amp;BI</a></li>
+                    <li><a href="">파트너</a></li>
+                    <li><a href="">채용안내</a></li>
+                    <li><a href="">캠퍼스찾기</a></li>
+                    <li><a href="">프랜차이즈안내</a></li>
+                 </ul>
+              </li>
+              <li><a href="">학생&amp;일반과정</a>
+                 <ul>
+                    <li><a href="">전산회계/세무</a></li>
+                    <li><a href="">자격증과정</a></li>
+                    <li><a href="">방학특강</a></li>
+                    <li><a href="">웹(WEB)전문가</a></li>
+                    <li><a href="">편집디자인</a></li>
+                    <li><a href="">OA</a></li>
+                    <li><a href="">인테리어</a></li>
+                    <li><a href="">캐드응용디자인</a></li>
+                 </ul>
+              </li>
               <li><a href="">직장인환급과정</a>
-                <li><a href="">작장인국비지원과정안내</a></li>
-                <li><a href="">자격증과정</a></li>
-                <li><a href="">전산회계/세무</a></li>
-                <li><a href="">웹(WEB)전문가</a></li>
-                <li><a href="">편집디자인</a></li>
-                <li><a href="">OA</a></li>
-                <li><a href="">캐드응용디자인</a></li>
-                <li><a href="">인테리어</a></li>
-             </li>
-           </ul>
-          </div>
-          <div style="border:1px red solid;">
-            <ul>
-              <li><a href="">실업자국비지원과정</a>
-                <li><a href="">실업자국비지원과정안내</a></li>
-                <li><a href="">국가기간전략산업</a></li>
-                <li><a href="">전산회계/세무</a></li>
-                <li><a href="">OA</a></li>
-                <li><a href="">웹(WEB)전문가</a></li>
-                <li><a href="">편집디자인</a></li>
-                <li><a href="">자격증과정</a></li>
-                <li><a href="">캐드응용디자인</a></li>
-                <li><a href="">인테리어</a></li>
-             </li>
-           </ul>
-          </div>
-          <div style="border:1px red solid;">
-            <ul>
-              <li><a href="">취업지원센터</a>
-                <li><a href="">취업지원센터</a></li>
-                <li><a href="">취업시스템</a></li>
-                <li><a href="">채용정보</a></li>
-                <li><a href="">사람인채용정보</a></li>
-                <li><a href="">취업현황</a></li>
-                <li><a href="">취업생인터뷰</a></li>
-                <li><a href="">협력업체</a></li>
-                <li><a href="">FAQ</a></li>
-                <li><a href="">직업선호도 검사</a></li>
-            </li>
-            </ul>
-          </div>
-          <div style="border:1px red solid;">
-            <ul>
-              <li><a href="">포트폴리오</a>
-                <li><a href="">웹디자인</a></li>
-                <li><a href="">모바일 디자인</a></li>
-                <li><a href="">편집출판 디자인</a></li>
-                <li><a href="">캐드설계 디자인</a></li>
-                <li><a href="">인테리어 3D디자인</a></li>
-                <li><a href="">제품 3D 디자인</a></li>
-             </li>
-            </ul>
-           </div>
-           <div style="border:1px red solid;">
-             <ul>
-              <li><a href="">자격증정보</a>
-                <li><a href="">자격증일정</a></li>
-                <li><a href="">시험센터</a></li>
-                <li><a href="">한국산업인력관리공단</a></li>
-                <li><a href="">대한상공회의소</a></li>
-                <li><a href="">민간자격증</a></li>
-                <li><a href="">국제자격증</a></li>
-                <li><a href="">한국세무사회</a></li>
-                <li><a href="">한국생산성본부</a></li>
-             </li>
-            </ul>
-          </div>
-          <div style="border:1px red solid;">
-            <ul>
-               <li><a href="">하이커뮤니티</a>
-                 <li><a href="">하설루</a></li>
-                 <li><a href="">수강생인터뷰</a></li>
-                 <li><a href="">강사인터뷰</a></li>
-                 <li><a href="">선배인터뷰</a></li>
-                 <li><a href="">Hi&ndash;Story</a></li>
-                 <li><a href="">수강후기</a></li>
-             </li>
-            </ul>
-           </div>
-          </ul>
-         </div>
-         <div>
-           <div style="border:1px blue solid;">
-             <img src="" alt="worker's card" width=500/>
-           </div>
-           <div style="border:1px blue solid;">
-             <h1> <a href=""> 하이미디어컴퓨터학원</a> </h1>
-           </div>
-           <div style="border:1px blue solid;">
-             <p style="border:1px red solid;"> TRUST BRAND AWARDS 2016 <br/>
-                고객이 신뢰하는 브랜드 대상 <br/>
-                4년 연속 수상</p>
-            </div>
-           <div style="border:1px blue solid;">
-             <ul style="border:1px red solid;">
-                <li><a href="">로그인</a></li>
-                <li><a href="">회원가입</a></li>
-                <li><a href="">고객센터</a></li>
-                <li><a href="">HI&ndash;cafe</a></li>
-             </ul>
-           </div>
-           <fieldset>
-              <legend> search </legend>
-              <input type="search" placeholder="과정 및 통합검색"/>
-           </fieldset>
-        </div>
-
-         <div style="border:1px blue solid;">
-           <div style="border:1px red solid;">
-             <ul>
-               <li><a href="">하이미디어</a>
-                  <li><a href="">하이미디어 Story</a></li>
-                  <li><a href="">하이미디어 History</a></li>
-                  <li><a href="">캠퍼스 소개</a></li>
-                  <li><a href="">CI&amp;BI</a></li>
-                  <li><a href="">파트너</li>
-                  <li><a href="">채용안내</a></li>
-                  <li><a href="">캠퍼스 찾기</a></li>
-                  <li><a href="">프랜차이즈 안내</a></li>
-                </li>
-              </ul>
-            </div>
-            <div style="border:1px red solid;">
-              <ul>
-                <li><a href="">학생&amp;일반과정</a>
-                  <li><a href="">전산회계/세무</a></li>
-                  <li><a href="">자격증과정</a></li>
-                  <li><a href="">방학특강</a></li>
-                  <li><a href="">웹(WEB)전문가</a></li>
-                  <li><a href="">편집디자인</a></li>
-                  <li><a href="">OA</a></li>
-                  <li><a href="">인테리어</a></li>
-                  <li><a href="">캐드응용디자인</a></li>
-                </li>
-               </ul>
-              </div>
-              <div style="border:1px red solid;">
-                <ul>
-                  <li><a hred="">직장인국비지원과정</a>
-                    <li><a href="">작장인국비지원과정</a></li>
+                 <ul>
+                    <li><a href="">작장인국비지원과정안내</a></li>
                     <li><a href="">자격증과정</a></li>
                     <li><a href="">전산회계/세무</a></li>
                     <li><a href="">웹(WEB)전문가</a></li>
@@ -207,12 +63,10 @@
                     <li><a href="">OA</a></li>
                     <li><a href="">캐드응용디자인</a></li>
                     <li><a href="">인테리어</a></li>
-                 </li>
-                </ul>
-              </div>
-              <div style="border:1px red solid;">
-                <ul>
-                  <li><a href="">실업자국비지원과정</a>
+                  </ul>
+              </li>
+              <li><a href="">실업자국비지원과정</a>
+                 <ul>
                     <li><a href="">실업자국비지원과정안내</a></li>
                     <li><a href="">국가기간전략산업</a></li>
                     <li><a href="">전산회계/세무</a></li>
@@ -222,12 +76,10 @@
                     <li><a href="">자격증과정</a></li>
                     <li><a href="">캐드응용디자인</a></li>
                     <li><a href="">인테리어</a></li>
-                  </li>
-                </ul>
-              </div>
-              <div style="border:1px red solid;">
-                <ul>
-                  <li><a href="">취업지원센터</a>
+                  </ul>
+              </li>
+              <li><a href="">취업지원센터</a>
+                 <ul>
                     <li><a href="">취업지원센터</a></li>
                     <li><a href="">취업시스템</a></li>
                     <li><a href="">채용정보</a></li>
@@ -237,24 +89,20 @@
                     <li><a href="">협력업체</a></li>
                     <li><a href="">FAQ</a></li>
                     <li><a href="">직업선호도 검사</a></li>
-                </li>
-               </ul>
-              </div>
-              <div style="border:1px red solid;">
-                <ul>
-                  <li><a href="">포트폴리오</a>
+                  </ul>
+              </li>
+              <li><a href="">포트폴리오</a>
+                 <ul>
                     <li><a href="">웹디자인</a></li>
                     <li><a href="">모바일 디자인</a></li>
                     <li><a href="">편집출판 디자인</a></li>
                     <li><a href="">캐드설계 디자인</a></li>
                     <li><a href="">인테리어 3D디자인</a></li>
                     <li><a href="">제품 3D 디자인</a></li>
-                </li>
-                </ul>
-               </div>
-               <div style="border:1px red solid;">
+                 </ul>
+              </li>
+              <li><a href="">자격증정보</a>
                  <ul>
-                  <li><a href="">자격증정보</a>
                     <li><a href="">자격증일정</a></li>
                     <li><a href="">시험센터</a></li>
                     <li><a href="">한국산업인력관리공단</a></li>
@@ -263,31 +111,166 @@
                     <li><a href="">국제자격증</a></li>
                     <li><a href="">한국세무사회</a></li>
                     <li><a href="">한국생산성본부</a></li>
-                </li>
-              </ul>
-              </div>
-              <div style="border:1px red solid;">
-                <ul>
-                   <li><a href="">하이커뮤니티</a>
+                </ul>
+              </li>
+              <li><a href="">하이커뮤니티</a>
+                 <ul>
                      <li><a href="">하설루</a></li>
                      <li><a href="">수강생인터뷰</a></li>
                      <li><a href="">강사인터뷰</a></li>
                      <li><a href="">선배인터뷰</a></li>
                      <li><a href="">Hi&ndash;Story</a></li>
                      <li><a href="">수강후기</a></li>
-                 </li>
+                  </ul>
+              </li>
+            </ul>
+           </div>
+         </div>
+
+         <div id="introduction" style="border:1px blue solid;">
+           <div id="logo">
+             <h1> <a href=""> 하이미디어컴퓨터학원</a> </h1>
+             <a href=""><span>고객이 신뢰하는 브랜드 대상 </span></a>
+           </div>
+
+           <div id="banner" style="border:1px blue solid;">
+             <div id="top_banner_btngroup">
+               <input type="button" value="다음"/>
+               <input type="button" value="이전"/>
+             </div>
+             <div id="top_banner_view">
+                <ul>
+                   <li><a href=""> 실업자과정 100% 무료수강 </a></li>
+                   <li><a href=""> 재직자근로자카드</a></li>
+                   <li><a href=""> 취업성공패키지를 만나세요</a></li>
                 </ul>
-                </div>
-                <p style="border:1px red solid;"><a href=""><b>SCS</b><br/>과정찾기</a></p>
+             </div>
+           </div>
+
+           <div id="site_option">
+            <ul>
+              <li><a href="">로그인</a></li>
+              <li><a href="">회원가입</a></li>
+              <li><a href="">고객센터</a></li>
+              <li><a href="">HI&ndash;CAFE</a></li>
+            </ul>
+          </div>
+
+           <div id="search">
+           <fieldset>
+              <legend> search </legend>
+              <label for="search-form"><input type="text" placeholder="과정 및 통합검색" id="search-form"/></label>
+              <input type="submit" value="검색"/>
+           </fieldset>
+          </div>
+         </div>
+
+         <div id="inb" style="border:1px blue solid;">
+           <div id="menu" style="border:1px red solid;">
+             <ul>
+               <li><a href="">하이미디어</a>
+                 <ul>
+                    <li><a href="">하이미디어 Story</a></li>
+                    <li><a href="">하이미디어 History</a></li>
+                    <li><a href="">캠퍼스 소개</a></li>
+                    <li><a href="">CI&amp;BI</a></li>
+                    <li><a href="">파트너</a></li>
+                    <li><a href="">채용안내</a></li>
+                    <li><a href="">캠퍼스 찾기</a></li>
+                    <li><a href="">프랜차이즈 안내</a></li>
+                 </ul>
+               </li>
+               <li><a href="">학생&amp;일반과정</a>
+                 <ul>
+                    <li><a href="">전산회계/세무</a></li>
+                    <li><a href="">자격증과정</a></li>
+                    <li><a href="">방학특강</a></li>
+                    <li><a href="">웹(WEB)전문가</a></li>
+                    <li><a href="">편집디자인</a></li>
+                    <li><a href="">OA</a></li>
+                    <li><a href="">인테리어</a></li>
+                    <li><a href="">캐드응용디자인</a></li>
+                  </ul>
+                </li>
+                <li><a href="">직장인국비지원과정</a>
+                  <ul>
+                    <li><a href="">작장인국비지원과정</a></li>
+                    <li><a href="">자격증과정</a></li>
+                    <li><a href="">전산회계/세무</a></li>
+                    <li><a href="">웹(WEB)전문가</a></li>
+                    <li><a href="">편집디자인</a></li>
+                    <li><a href="">OA</a></li>
+                    <li><a href="">캐드응용디자인</a></li>
+                    <li><a href="">인테리어</a></li>
+                  </ul>
+                </li>
+                <li><a href="">실업자국비지원과정</a>
+                  <ul>
+                    <li><a href="">실업자국비지원과정안내</a></li>
+                    <li><a href="">국가기간전략산업</a></li>
+                    <li><a href="">전산회계/세무</a></li>
+                    <li><a href="">OA</a></li>
+                    <li><a href="">웹(WEB)전문가</a></li>
+                    <li><a href="">편집디자인</a></li>
+                    <li><a href="">자격증과정</a></li>
+                    <li><a href="">캐드응용디자인</a></li>
+                    <li><a href="">인테리어</a></li>
+                  </ul>
+                </li>
+                <li><a href="">취업지원센터</a>
+                  <ul>
+                    <li><a href="">취업지원센터</a></li>
+                    <li><a href="">취업시스템</a></li>
+                    <li><a href="">채용정보</a></li>
+                    <li><a href="">사람인채용정보</a></li>
+                    <li><a href="">취업현황</a></li>
+                    <li><a href="">취업생인터뷰</a></li>
+                    <li><a href="">협력업체</a></li>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">직업선호도 검사</a></li>
+                  </ul>
+               </li>
+               <li><a href="">포트폴리오</a>
+                  <ul>
+                    <li><a href="">웹디자인</a></li>
+                    <li><a href="">모바일 디자인</a></li>
+                    <li><a href="">편집출판 디자인</a></li>
+                    <li><a href="">캐드설계 디자인</a></li>
+                    <li><a href="">인테리어 3D디자인</a></li>
+                    <li><a href="">제품 3D 디자인</a></li>
+                 </ul>
+               </li>
+               <li><a href="">자격증정보</a>
+                  <ul>
+                    <li><a href="">자격증일정</a></li>
+                    <li><a href="">시험센터</a></li>
+                    <li><a href="">한국산업인력관리공단</a></li>
+                    <li><a href="">대한상공회의소</a></li>
+                    <li><a href="">민간자격증</a></li>
+                    <li><a href="">국제자격증</a></li>
+                    <li><a href="">한국세무사회</a></li>
+                    <li><a href="">한국생산성본부</a></li>
+                  </ul>
+                </li>
+                <li><a href="">하이커뮤니티</a>
+                  <ul>
+                     <li><a href="">하설루</a></li>
+                     <li><a href="">수강생인터뷰</a></li>
+                     <li><a href="">강사인터뷰</a></li>
+                     <li><a href="">선배인터뷰</a></li>
+                     <li><a href="">Hi&ndash;Story</a></li>
+                     <li><a href="">수강후기</a></li>
+                  </ul>
+                </li>
+               </ul>
+              </div>
+               <input type="button" value="SCS과정찾기"/>
                </div>
-              </ul>
-            <div>
-              <img src="" alt="신촌 정규과정 내일배움과정" width=500/>
-            </div>
-            <div style="border:1px red solid;" >
-              <ul>
+
+             <div>
+               <ul>
                 <li><a href="">EVENT</a></li>
-                <li><a href="">SCS<</a></li>
+                <li><a href="">SCS</a></li>
                 <li><a href="">취업센터</a></li>
                 <li><a href="">온라인상담</a></li>
                 <li><a href="">SERVICE</a></li>
