--- a/css/boxmodel.html
+++ b/css/boxmodel.html
@@ -10,12 +10,13 @@
        height
           min-height
           max-height
-       margin
+       margin 바깥쪽 여백
           margin-top
           margin-left
           margin-right
           margin-bottom
-       padding
+          margin만 할 경우 4군데 모두 들어감
+       padding 안쪽 여백
           padding-top
           padding-left
           padding-right
@@ -29,16 +30,16 @@
           border-style
           border-color
           border-collapse
-       css3=
+          css3=에서 새롭게
           border-radisu
     </style>*/ -->
 
     <style>
-        .menu{width:350px; height:200px; border:1px #F00 solid}
-        .inner{border:1px #F00 solid; width:auto; margin:10px}
+        .menu{border:1px #F00 solid; width:350px; height:200px;}
+        .inner{border:1px #F00 solid; width:auto; margin:10px;}
     </style>
-  </head>
 
+   </head>
   <body>
 
      <div class="menu">
