--- a/css/height.html
+++ b/css/height.html
@@ -4,7 +4,11 @@
      <meta charset="utf-8">
      <title> height </title>
        <style>
+           /*html{height:100%}
+           body{height:100%}*/
           .box{width:200px; border: 1px #F00 solid;}
+          .box1{height:auto; border: 1px #F00 solid;}
+          .box2{height:100%; border: 1px #F00 solid;}
        </style>
    </head>
    <body>
@@ -19,5 +23,23 @@
       </div>
       <!-- 띄어쓰기를 하게 되면 box안에 들어가게 된다. -->
 
+      <!-- height의 auto값 -->
+      <div class="box1">
+      <!-- height에 auto가 주어지면 height의 default 값은 0이기 때문에 긴 직선으로 보여진다 -->
+            box <br>
+            box <br>
+            box <br>
+            box <br>
+            box <br>
+      </div>
+      <div class="box1">
+      <!-- height에 auto가 주어지면 height의 default 값은 0이기 때문에 긴 직선으로 보여진다 -->
+            box <br>
+            box <br>
+      </div>
+      <div class="box2"></div>
+      <!-- height가 100%이더라도 기본적인 html과 body값이 설정되어 있지 않으면 -->
+      <!-- default가 0값으로 설정되어 100%적용이 안된다 -->
+
    </body>
-</html>   
+</html>
