--- a/css/bacground.html
+++ b/css/bacground.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>background</title>
       <style>
-        /*.box{width:200px; height:200px; border: 1px blue solid;
+        .box{width:200px; height:200px; border: 1px blue solid;
              background-color: #F00;}
         .box1{width:200px; height:200px; border: 1px blue solid;
               background-color: rgb(255,255,0);}
@@ -15,13 +15,13 @@
         .box3{width:600px; height:600px; border: 1px blue solid;
               background-image:url('../images/redflower.jpg'); background-repeat:no repeat;}
         .box5{width:600px; height:600px; border: 1px blue solid;
-              background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: repeat;}*/
-        /*.box_x{width:600px; height:600px; border: 1px blue solid;
+              background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: repeat;}
+        .box_x{width:600px; height:600px; border: 1px blue solid;
               background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: repeat-x;}
         .box_y{width:600px; height:600px; border: 1px blue solid;
               background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: repeat-y;}
         .box_n{width:600px; height:600px; border: 1px blue solid;
-               background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: no-repeat;}*/
+               background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: no-repeat;}
         .box_p{width:600px; height:600px; border: 1px blue solid;
                background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: no-repeat; background-position: center center;}
         .box_p1{width:600px; height:600px; border: 1px blue solid;
@@ -34,7 +34,7 @@
   <body>
       <!-- background
       background-color
-      background-imgae
+      background-image
       background-repeat(default)
                  repeat-x
                  repeat-y
