--- a/css/sized.html
+++ b/css/sized.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>sized</title>
       <style>
-         .a{background-image:url('../images/balls.jpg');
+         body{background-image:url('../images/balls.jpg');
             -webkit-background-size: 100px;
             background-size: 100px;}
       </style>
 
   </head>
   <body>
-    <div class="a"></div>
+
   </body>
 </html>
