--- a/css/bacground.html
+++ b/css/bacground.html
@@ -26,7 +26,8 @@
                background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: no-repeat; background-position: center center;}
         .box_p1{width:600px; height:600px; border: 1px blue solid;
                background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: no-repeat; background-position: right 10px bottom 10px;}
-
+        .lct-left{width:328px; height: 248px; border: 1px blue solid;
+                  background-image:url('../images/lct-left.jpg');}
 
 
       </style>
@@ -62,6 +63,7 @@
      <div class="box_n"></div>
      <div class="box_p"></div>
      <div class="box_p1"></div>
+     <div class="lct-left"></div>
 
 
 
