--- a/css/news.html/news_contact.html
+++ b/css/news.html/news_contact.html
@@ -1,11 +1,11 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>document</title>
      <style type="text/css">
 
-       /**{margin: 0; padding: 0;}
+       *{margin: 0; padding: 0;}
        ul, ol{list-style: none}
        a{text-decoration: none; color: #000}
        img{vertical-align: top}
@@ -49,5 +49,5 @@
 
 
     </div>
-  </body>*/
+  </body>
 </html>
