--- a/css/bacground.html
+++ b/css/bacground.html
@@ -28,6 +28,9 @@
                background-image:url('../images/redflower.jpg'); background-size: 100px 100px; background-repeat: no-repeat; background-position: right 10px bottom 10px;}
         .lct-left{width:328px; height: 248px; border: 1px blue solid;
                   background-image:url('../images/lct-left.jpg');}
+        .lc-mid{width:146px; height: 132px; background-image:url('../images/lc-mid.jpg');}
+
+        .lct-news .lct-mid{width:146px; height:100px; outline:1px #F00 solid;background-image:url('../images/lc-mid.jpg');}
 
 
       </style>
@@ -65,7 +68,12 @@
      <div class="box_p1"></div>
      <div class="lct-left"></div>
 
-
+     <ul class="lct-news">
+        <li>
+          <div class="lct-mid"></div>
+          <span>'강적들'표창원편 결방, 그림 논란탓?</span>
+        </li>
+     </ul>
 
   </body>
 </html>
