--- a/css/news.html/bobae.html
+++ b/css/news.html/bobae.html
@@ -148,8 +148,15 @@
      .bot_menu{outline:1px #F00 solid; width:990px; height:200px;}
      .bot_se{outline:1px #F00 solid; width: 250px; height: 200px; float:left;}
      div[class^="bot-"]{outline:1px #F00 solid; width: 120px; height: 200px; float:left;}
-     .bot-bar{outline:1px blue solid; height: 20px; width: 990px;}
-     .bot-bar li{outline:1px #F00 solid; float: left;}
+
+     .bot_bar{outline:1px #F00 solid; height: 30px; width: 990px;}
+     .bot_bar li{outline:1px #F00 solid; float: left; margin:5px;}
+
+     .footer{outline:1px #F00 solid; height:180px;}
+     .foot{outline:1px #F00 solid; width: 640px; height: 100%; margin: 0 auto;}
+     .foot-bar{outline:1px #F00 solid; height: 50px;}
+     .foot-bar li{outline:1px #F00 solid; font-size: 12px; float: left; margin: 10px;}
+     .info{font-size: 10px; text-align:center;}
 
 
 
@@ -228,7 +235,7 @@
                         <li><a href=""><span>협력업체</span></a></li>
                         <li><a href=""><span>이벤트</span></a></li>
                       </ul>
-                </div>
+                  </div>
           </header>
 
           <div class="menu-bar">
@@ -441,34 +448,34 @@
                                         <span>회원가입</span>
                                         <span>ID/비밀번호 찾기</span>
                                     </div>
-                               </div>
+                              </div>
                          </div>
 
                           <div class="rc-first">
                                 <h6>커뮤니티 핫이슈</h6>
                                 <div class="arrow">
-                                  <img src="../../bobae/num120.png" alt=""/>
+                                    <img src="../../bobae/num120.png" alt=""/>
                                 </div>
-                                <ul>
-                                    <li><img src="../../bobae/1.png" alt=""/>
-                                        <span>길가에 멈춰선 차량</br>돕는 훈훈한 모습</span>
-                                    </li>
-                                    <li>
-                                        <img src="../../bobae/right_top.png" alt=""/>
-                                    </li>
-                                    <li><img src="../../bobae/2.png" alt=""/>
-                                        <span>유리를 박살내고</br>차량용품 싹쓸이</span>
-                                     </li>
-                                     <li>
-                                        <img src="../../bobae/right_mid.png" alt=""/>
-                                    </li>
-                                    <li><img src="../../bobae/3.png" alt=""/>
-                                        <span>짙은 안개 고속도로</br>살벌한 추돌사고</span>
-                                    </li>
-                                    <li>
-                                        <img src="../../bobae/right_bot.png" alt=""/>
-                                     </li>
-                                </ul>
+                                    <ul>
+                                        <li><img src="../../bobae/1.png" alt=""/>
+                                            <span>길가에 멈춰선 차량</br>돕는 훈훈한 모습</span>
+                                        </li>
+                                        <li>
+                                            <img src="../../bobae/right_top.png" alt=""/>
+                                        </li>
+                                        <li><img src="../../bobae/2.png" alt=""/>
+                                            <span>유리를 박살내고</br>차량용품 싹쓸이</span>
+                                         </li>
+                                         <li>
+                                            <img src="../../bobae/right_mid.png" alt=""/>
+                                        </li>
+                                        <li><img src="../../bobae/3.png" alt=""/>
+                                            <span>짙은 안개 고속도로</br>살벌한 추돌사고</span>
+                                        </li>
+                                        <li>
+                                            <img src="../../bobae/right_bot.png" alt=""/>
+                                         </li>
+                                    </ul>
                           </div>
                           <div class="rc-mid">
                                   <span>자동차 뉴스</span>
@@ -562,7 +569,6 @@
                              <li>보배드림 어플 업데이트 안내</li>
                            </ul>
                        </div>
-
                       <div class="bob-r">
                          <span>서비스 전체보기</span>
                       </div>
@@ -653,8 +659,8 @@
                       </div>
                 </div>
 
-                <div class="bot-bar">
-                     <!-- <ul>
+                <div class="bot_bar">
+                     <ul>
                        <li><span>이용문의</span></li>
                        <li><span>02-784-2329</span></li>
                        <li><span>차량광고</span></li>
@@ -669,7 +675,31 @@
                        <li><span>02-784-2329</span></li>
                        <li><span>신고센터</span></li>
                        <li><span>장애/오류신고</span><span>권리침해신고</span></li>
-                     </ul> -->
+                     </ul>
+                </div>
+
+                <div class="footer">
+                   <div class="foot">
+                       <div class="foot-bar">
+                          <ul>
+                             <li><span>회사소개</span></li>
+                             <li><span>제휴광고</span></li>
+                             <li><span>협력업체신청</span></li>
+                             <li><span>인재채용</span></li>
+                             <li><span>이용약관</span></li>
+                             <li><span>개인정보취급방침</span></li>
+                             <li><span>고객센터</span></li>
+                             <li><span>사이트맵</span></li>
+                          </ul>
+
+                       </div>
+                       <div class="info">
+                         <span>사업자등록 : 117-81-64543</span><span>통신판매업신고번호 : 제 2012-서울영등포-0697호</span></br>
+                         <span>주식회사 보배네트워크 주소 : 서울 영등포구 양평동 3가 16 우림E비즈센터 11, 12층 </span> <span>대표이사 : 김보배</span> <span>개인정보관리책임자 : 김태형</span></br>
+                         <span>대표전화 : 02-734-2329</span> <span>대표팩스 : 02-6499-2329</span> <span>이메일: bobaedream@bobaedream.co.kr</span></br>
+                         <span>Copyright(c) BOBAENETWORK All rights reserved</br>
+                       </div>
+                   </div>
                 </div>
 
 
