--- a/css/vertical.html
+++ b/css/vertical.html
@@ -81,6 +81,18 @@
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
+        <div style="display:table">
+              <div style="display:table-row">
+                <div style="display:table-cell">1-1</div>
+                <div style="display:table-cell">2-1</div>
+                <div style="display:table-cell">3-1</div>
+              </div>
+              <div style="display:table-row">
+                <div style="display:table-cell">1-2</div>
+                <div style="display:table-cell">2-2</div>
+                <div style="display:table-cell">3-2</div>
+              </div>
+        </div>
 
 
 
