--- a/css/news.html/bobae_exercise.html
+++ b/css/news.html/bobae_exercise.html
@@ -13,7 +13,8 @@
     /*option*/
     .fl{float:left;}
     .fr{float:right;}
-    i.icon-select{}
+    i.icon-select{margin-left: 3px; background-image:url(../../bobae/menu.png);}
+    i.icon-mobile{background-image:url(../../bobae/icon_mobile.png);}
 
 
 
@@ -29,7 +30,7 @@
     .gnb .rank li .up_icon{background-image:url('../../bobae/up.jpg'); background-repeat: no-repeat; background-position: 0; padding-left: 8px; font-style:normal;}
 
     .gnb .global_menu li strong{color: blue;}
-    .gnb .global_menu li{float: left; padding: 0 8px 0 7px; background-image:url('../../bobae/lnb_horizon.png'); background-repeat:no-repeat; background-position: 0 10px;}
+    .gnb .global_menu li{float: left; padding: 0 8px 0 7px; background-image:url('../../bobae/horizon.png'); background-position: 0 10px;}
     .gnb .global_menu li:first-child{background:none;}
 
 
