--- a/css/news.html/bobae_real1.html
+++ b/css/news.html/bobae_real1.html
@@ -17,7 +17,7 @@
         img{vertical-align:top;}
         input{vertical-align:middle;}
         fieldset{border:0;}
-        
+
 
         /*option*/
         .fl{float:left;}
@@ -103,7 +103,7 @@
             color:blue;
         }
         .gnb .global_menu li:first-child{
-            background:none;
+            background:none;}
         }
 
 
