--- a/css/news.html/new_bobae1.html
+++ b/css/news.html/new_bobae1.html
@@ -20,8 +20,16 @@
           .wrap{border: 1px #F00 solid; width: 1663px; height: 2016px;}
           .heading{border-bottom: 1px #d5d0cc solid; height: 30px; background-color: #f8f8f8;}
           .heading .gnb{border: 1px #F00 solid; width:990px; height: 30px; margin: 0 auto; line-height: 30px;}
-          .gnb a.book_mark{padding-left: 13px; background-image:url('../../bobae/star.png');}
-          .gnb .rank{padding-left: 14px;}
+          .gnb a.book_mark{padding-left: 20px;
+                           background-image:url(../../bobae/icon_star.png);
+                           background-repeat:no-repeat;                        
+                           background-position:0 10px;
+                          }
+          .gnb .rank{padding-left: 13px;}
+          .gnb .rank li{padding-left: 19px;
+                        background-image:url(../../bobae/num.png);
+                        background-repeat:no-repeat;
+                        background-position: 0 10px;}
 
 
 
@@ -34,7 +42,7 @@
                  <div class="gnb">
                      <div class="site_option">
                          <a href="" class="book_mark fl"><i class="icon_star"></i>즐겨찾기</a>
-                         <ol class="rank">
+                         <ol class="rank fl">
                              <li><a href="">기아 K5 하이브리드(12년식)<i class="up_icon">45</i></a></li>
                              <li><a href="">기아 K5 하이브리드(12년식)</a></li>
                              <li><a href="">기아 K5 하이브리드(12년식)</a></li>
@@ -46,7 +54,7 @@
                              <li><a href="">기아 K5 하이브리드(12년식)</a></li>
                              <li><a href="">기아 K5 하이브리드(12년식)</a></li>
                          </ol>
-                         <div class="">
+                         <div class="global-menu">
                              <ul>
                                    <li><a href=""></a></li>
                                    <li><a href=""></a></li>
