--- a/css/vertical.html
+++ b/css/vertical.html
@@ -18,63 +18,63 @@
     </head>
 
     <body>
-        <div class="display_f">
+        <div class="display_f"> in-ver-mid
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
-        <div class="display_s">
+        <div class="display_s"> in-ver-top
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
-        <div class="display_f_f">
+        <div class="display_f_f"> in-ver-tb
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
-        <div class="display_f_s">
+        <div class="display_f_s"> in-ver-tt
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
-        <div class="display_t">
+        <div class="display_t"> ib-mid
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
-        <div class="display_fo">
+        <div class="display_fo"> ib-t
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
-        <div class="display_fi">
+        <div class="display_fi"> ib-b
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
-        <div class="display_si">
+        <div class="display_si"> t-mid
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
             <div style="width:100px; height:100px;">백합</div>
             <div style="width:100px; height:500px;">데이지</div>
         </div>
-        <div class="display_se">
+        <div class="display_se"> tc-mid
             <div style="width:100px; height:600px;">개나리</div>
             <div style="width:100px; height:400px;">무궁화</div>
             <div style="width:100px; height:200px;">장미</div>
