--- a/css/news.html/bobae.html
+++ b/css/news.html/bobae.html
@@ -8,7 +8,7 @@
     ul,ol,p{margin:0; padding:0; list-style:none; font-size:10px;}
     a{text-decoration:none;}
     [li span]{margin:10px; font-size: 12px;}
-     .strong{font-size:14px; margin-bottom:5px;}
+     .strong{font-size:13px; margin-bottom:5px;}
      .right{position: absolute; right: 00px; top:0;}
      .center{position: absolute; right: 30px; top: 10px;}
      .b{font-weight:bold;}
@@ -291,17 +291,17 @@
                                  <div class="lm-right">
                                               <ul>
                                                   <li><img src="../../bobae/third_image.png" alt="car"/>
-                                                      <p><span>국산중고차 특종매물</span></br>
+                                                      <p><span class="strong">국산중고차 특종매물</span></br>
                                                       <span>1999 현대 스텔라 1.5 88형 GLX</br>
                                                             극 회소, 1988년 올림픽 공식 모델!!</span></p>
                                                   </li>
                                                   <li><img src="../../bobae/forth_image.png" alt="car"/>
-                                                       <p><span>수입중고차 특종매물</span></br>
+                                                       <p><span class="strong">수입중고차 특종매물</span></br>
                                                        <span>2012 람보르기니 가야르도 LP560-4</br>
                                                              11.8ch -> 200km 람보르기니!!</span></p>
                                                   </li>
                                                   <li><img src="../../bobae/fifth_image.png" alt="auto"/>
-                                                      <p><span>오토바이 특종매물</span></br>
+                                                      <p><span class="strong">오토바이 특종매물</span></br>
                                                       <span>2011 브렘보 엉벌즈 R</span></br>
                                                       <span>rhddlsdusql 1L->16km</span></p>
                                                   </li>
