--- a/css/news.html/bobae_exercise.html
+++ b/css/news.html/bobae_exercise.html
@@ -12,27 +12,48 @@
 
 
      /*layout*/
-    .header{height:30px; background-color:#f8f8f8; border-bottom: 1px #d5d0cc solid;}
+    /*.header{height:30px; background-color:#f8f8f8; border-bottom: 1px #d5d0cc solid;}
     .header .gnb{outline: 1px #d5d0cc solid; width: 990px; margin: 0 auto; line-height:30px;}
     .header .gnb .icon_bookmark{margin-right: 10px; background-image:url(../../bobae/icon_star.png); padding-left: 10px; background-repeat:no-repeat; background-position: 0 10px;}
     .header .gnb .rank{padding-left: 18px; background-image:url(../../bobae/num.png); background-repeat:no-repeat; background-position: 0 10px;}
     .header .gnb .rank li{display: none;}
-    .header .gnb .rank .on{display:block;}
+    .header .gnb .rank .on{display:block;}*/
     /*none이 아닌 사항은 보인다. 그렇기 때문에 inline이어도 보이게 된다*/
 
 
 
 
      /*option*/
-     .fl{float:left;}
-     .fr{float:right;}
+     /*.fl{float:left;}
+     .fr{float:right;}*/
+.a{border: 1px #F00 solid;
+   width: 600px;
+   height: 50px;
+   line-height: 50px;}
+.a-1{border: 1px #F00 solid;
+     height: 30px
+     float:right;}
+.a-1 li{border: 1px #F00 solid;
+        float:right;}
+
+.b{border: 1px #F00 solid;
+   width: 600px;
+   height: 50px;
+   line-height: 50px;}
+.b-1{border: 1px #F00 solid;
+     float:right;}
+.b-1 li{border: 1px #F00 solid;
+        display:inline-block;
+        vertical-align:middle;}
+
+
 
 
 
     </style>
     </head>
     <body>
-       <div class="header">
+       <!-- <div class="header">
           <div class="gnb">
               <div class="site_option">
                   <div><a href=""class="icon_bookmark fl">즐겨찾기</a></div>
@@ -77,6 +98,41 @@
 
 
 
-       </div>
+       </div> -->
+
+
+<div class="a">
+   <div class="a-1">
+       <ul>
+           <li><a href="">aaaaaa</a></li>
+           <li><a href="">aaaaaa</a></li>
+           <li><a href="">aaaaaa</a></li>
+           <li><a href="">aaaaaa</a></li>
+           <li><a href="">aaaaaa</a></li>
+           <li><a href="">aaaaaa</a></li>
+           <li><a href="">aaaaaa</a></li>
+           <li><a href="">aaaaaa</a></li>
+       </ul>
+   </div>
+</div>
+
+<div class="b">
+   <div class="b-1">
+       <ul>
+           <li><a href="">bbbbbb</a></li>
+           <li><a href="">bbbbbb</a></li>
+           <li><a href="">bbbbbb</a></li>
+           <li><a href="">bbbbbb</a></li>
+           <li><a href="">bbbbbb</a></li>
+           <li><a href="">bbbbbb</a></li>
+           <li><a href="">bbbbbb</a></li>
+           <li><a href="">bbbbbb</a></li>
+       </ul>
+   </div>
+</div>
+
+
+
+
     </body>
 </html>
