--- a/css/news.html/bobae_real1.html
+++ b/css/news.html/bobae_real1.html
@@ -65,7 +65,7 @@
         .gnb a.book_mark{
             font-size:11px;
             padding-left:13px;
-            background-image: url(../images/bobea/icon_star.png);
+            background-image: url(../../images/bobea/icon_star.png);
             background-repeat: no-repeat;
             background-position: 0 10px;
          }
@@ -95,7 +95,7 @@
         .gnb .global_menu li{
             float:left;
             padding:0 8px 0 7px;
-            background-image: url(../images/bobea/top_horizon.png);
+            background-image: url(../../bobae/horizon.png);
             background-repeat: no-repeat;
             background-position: 0 10px;
         }
