--- a/css/news.html/new_bobae1.html
+++ b/css/news.html/new_bobae1.html
@@ -22,7 +22,7 @@
           .heading .gnb{border: 1px #F00 solid; width:990px; height: 30px; margin: 0 auto; line-height: 30px;}
           .gnb a.book_mark{padding-left: 20px;
                            background-image:url(../../bobae/icon_star.png);
-                           background-repeat:no-repeat;                        
+                           background-repeat:no-repeat;
                            background-position:0 10px;
                           }
           .gnb .rank{padding-left: 13px;}
@@ -30,6 +30,16 @@
                         background-image:url(../../bobae/num.png);
                         background-repeat:no-repeat;
                         background-position: 0 10px;}
+        .global-menu ul{font-size: 0;
+                        }
+        .global-menu li{display:inline-block;
+                        vertical-align:middle;
+                        font-size: 12px;
+                        margin: 0 8px 0 7px;
+                        background-image: url('../../bobae/horizon.png');
+                        background-repeat: no-repeat;
+                        background-position: 0 10px;
+                        }
 
 
 
@@ -54,16 +64,16 @@
                              <li><a href="">기아 K5 하이브리드(12년식)</a></li>
                              <li><a href="">기아 K5 하이브리드(12년식)</a></li>
                          </ol>
-                         <div class="global-menu">
+                         <div class="global-menu fr">
                              <ul>
-                                   <li><a href=""></a></li>
-                                   <li><a href=""></a></li>
-                                   <li><a href=""></a></li>
-                                   <li><a href=""></a></li>
-                                   <li><a href=""></a></li>
-                                   <li><a href=""></a></li>
-                                   <li><a href=""></a></li>
-                                   <li><a href=""></a></li>
+                                   <li><a href="">로그인</a></li>
+                                   <li><a href="">회원가입</a></li>
+                                   <li><a href="">마이페이지</a></li>
+                                   <li><a href="">쪽지</a></li>
+                                   <li><a href="">찜한차량</a></li>
+                                   <li><a href="">고객센터</a></li>
+                                   <li><a href="">전체메뉴</a></li>
+                                   <li><a href="">모바일</a></li>
                              </ul>
                         </div>
                      </div>
