--- a/css/news.html/new_bobae_real.part3.html
+++ b/css/news.html/new_bobae_real.part3.html
@@ -67,6 +67,8 @@
     }
     .gnb .global_menu ul{
         font-size:0;
+        /*li에서 element들의 띄어쓰기로 인해 발생하는 여백을 없애주기 위한 작업 */
+
     }
     .gnb .global_menu li{
         display: inline-block;
